# vektor-flow

./: .gitignore  .gitmodules  BUNDLE_BRINGUP.md  CONTEXT.md  INSTALL.md  NATIVE_CORE.md  PYTHON_DEPENDENCY_AUDIT.md  README.md  RELEASES.md  TESTING.md  build.ps1  install_extension.ps1  package.json  pyproject.toml  rebuild-and-run-demo.ps1
.cursor/rules/: vf-ui-demo.mdc
.github/workflows/: docs-pages.yml
assets/chess/: README.md  chess_asset_loader.vkf  manifest.csv
compiler/native/: vf_browser_server_smoke.cpp  vkf_ast_to_ir_smoke.cpp  vkf_bootstrap_bundle_artifact_smoke.cpp  vkf_bootstrap_bundle_lexer_smoke.cpp  vkf_bootstrap_bundle_parser_smoke.cpp  vkf_bootstrap_manifest_smoke.cpp  vkf_compiler_artifact_smoke.cpp  vkf_driver_artifact_smoke.cpp  vkf_symbolic.hpp  (+9 more)
docs/: index.md  install.md  native-python-removal-roadmap.md  package-lock.json  package.json  testing.md  try-live.md  ui-runtime-tracer-bullet.md  vscode.md
examples/: 01_hello.vkf  02_bindings.vkf  03_blocks_return_last.vkf  04_early_return.vkf  05_comments_and_semicolons.vkf  100_axis_4_panel.vkf  10_scalars.vkf  110_mirror_showcase.vkf  111_mirror_smoke.vkf  112_scene3d_smoke.vkf  114_grass_texture_cube.vkf  11_strings_and_interpolation.vkf  12_tuples.vkf  13_structs.vkf  14_vectors.vkf  15_ranges.vkf  16_multisets.vkf  20_struct_field_rebind.vkf  21_vector_index_rebind.vkf  22_alias_rebinding.vkf  23_spill_and_override.vkf  24_immutable_values_mutable_resources.vkf  30_functions_basic.vkf  31_single_line_functions.vkf  32_recursion.vkf  33_docstrings.vkf  34_typed_parameters.vkf  40_default_args.vkf  41_named_args.vkf  42_call_spread_vector.vkf  43_call_spread_struct.vkf  44_variadic_positional.vkf  45_variadic_named.vkf  50_struct_types.vkf  51_vector_shape_types.vkf  52_compile_time_shape_params.vkf  53_type_reflection.vkf  60_if.vkf  61_switch.vkf  62_pipes.vkf  (+101 more)
native/: CMakeLists.txt
native/VfCore/: CMakeLists.txt  README.md
native/VfCore/include/vf/: ast.hpp  frontend.hpp  geom_ledger_contract.hpp  json.hpp  lexer.hpp  parser.hpp  runtime.hpp  source.hpp  token.hpp  ui_runtime_contract.hpp
native/VfCore/src/: ast.cpp  frontend.cpp  geom_ledger_contract.cpp  lexer.cpp  lexer_core.cpp  lexer_literals.cpp  lexer_state.hpp  lexer_symbols.cpp  main.cpp  parser.cpp  parser_core.cpp  parser_expr.cpp  parser_state.hpp  runtime.cpp  source.cpp  token.cpp  ui_runtime_contract.cpp
native/VfOverlay/: CMakeLists.txt  README.md  main.cpp  overlay_geometry_ledger_runtime.cpp  overlay_geometry_ledger_runtime.hpp  overlay_packet_runtime.cpp  overlay_packet_runtime.hpp  overlay_packet_runtime_http_test.cpp  overlay_packet_runtime_input_test.cpp  overlay_packet_runtime_reload_test.cpp  vf_overlay_host.hpp  vkf_launcher.cpp
native/VfOverlay/tools/: generate_embedded_vf_ui_assets.cmake  generate_embedded_vf_ui_assets.py
native/VfOverlay/vf/: compiled_ui_bootstrap_host.cpp  compiled_ui_bootstrap_host.hpp  compiled_ui_bootstrap_host_test.cpp  compiled_ui_bootstrap_packet_bridge.cpp  compiled_ui_bootstrap_packet_bridge.hpp  compiled_ui_bootstrap_packet_bridge_test.cpp  compiled_ui_bootstrap_runtime.cpp  compiled_ui_bootstrap_runtime.hpp  compiled_ui_bootstrap_runtime_test.cpp  compiled_ui_runtime_abi.hpp  compiled_ui_runtime_demo.cpp  compiled_ui_runtime_demo.hpp  compiled_ui_runtime_loader.cpp  compiled_ui_runtime_loader.hpp  compiled_ui_runtime_loader_test.cpp  compiled_ui_runtime_registry.cpp  compiled_ui_runtime_registry.hpp  compiled_ui_runtime_registry_test.cpp  crash_diagnostics.cpp  crash_diagnostics.hpp  geom_ledger_contract.cpp  geom_ledger_contract.hpp  geom_ledger_face_edge_vertex_layout.hpp  geom_ledger_surface_heightfield_layout.hpp  json.cpp  ui_runtime_contract.cpp  ui_runtime_contract.hpp
scripts/: build-release-bundle.ps1  build-release-bundle.sh  build-vf-overlay.ps1  build_release_bundle.py  capture_docs_ui.py  generate_readme_examples.py  render_readme_ui_assets.py  run-screen-demo.ps1  run-shared-runtime-demo.ps1  run-shared-runtime-demo.sh  run-ui-scene-fps-benchmark.cjs  run-vf-ui.ps1  run_ui_style_content_overlay.py  verify_release_bundle.py
tests/: conftest.py  test_abs_norm.py  test_ampersand_concat.py  test_axis_tag.py  test_benchmarks.py  test_bind_expr.py  test_bool_keywords.py  test_boolean_xor.py  test_bracket_ops_eval.py  test_branch_dispatch.py  test_bridge_stdlib.py  test_builtin_attrs_and_raise.py  test_capture_stdlib.py  test_cli.py  test_cli_eval.py  test_cli_native_overlay_contract.py  test_collections.py  test_collections_extended.py  test_compiler_bootstrap.py  test_control_flow.py  test_cpp_backend.py  test_custom_display_and_templates.py  test_derivative_suffix.py  test_display_overload.py  test_docstrings.py  test_dot_reach.py  test_dotted_index.py  test_embedded_vf_ui_assets.py  test_emit_disallowed_in_literals.py  test_events.py  test_exact_vs_struct_eq.py  test_examples_stdout.py  test_expr_abs.py  test_func_types.py  test_function_call_semantics.py  test_geom_display_events.js  test_geom_frame_adapter.js  test_geom_ledger.js  test_geom_ledger_layout.js  test_geom_ledger_transport.js  (+115 more)
vektorflow/: __init__.py  __main__.py  ast.py  benchmarks.py  cli.py  compiler_bootstrap.py  cpp_backend.py  cpp_dynamic.py  errors.py  expr.py  interpreter.py  ir.py  ir_executor.py  lexer.py  native_core_lexer.py  native_frontend.py  native_intrinsics.py  native_lexer_fixtures.py  native_lexer_proto.py  native_overlay_scene_bundle.py  native_overlay_scene_contract.py  native_overlay_scene_contract_io.py  native_overlay_scene_extractor.py  native_overlay_scene_frontend.py  native_overlay_scene_runtime.py  native_parser_proto.py  native_program_artifact.py  native_runtime_bundle.py  native_scene_entities.py  native_scene_ir_builder.py  native_scene_ir_entities.py  native_scene_topology.py  optimize_ir.py  parser.py  physics_dynamics.py  physics_hard_discs.py  physics_properties.py  physics_rigid_body.py  release_bundle.py  slot_ir.py  (+10 more)
vscode/: LICENSE  README.md  docIndex.js  extension.js  language-configuration.json  package.json  vektorflow-0.0.1.vsix  vektorflow-0.0.2.vsix
(+317 files in other folders)
