[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vektorflow"
version = "0.0.6"
description = "Vektor Flow — a mathematical visualization and computational language"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sven Viktor Jonsson" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "playwright>=1.40",
]

[project.scripts]
vkf = "vektorflow.cli:vkf_entry"

[tool.setuptools.packages.find]
include = ["vektorflow*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "network: tests that need outbound HTTP (e.g. KaTeX CSS from CDN for vf-ui e2e)",
]
